--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -56,8 +56,8 @@
       <button onclick="location.href='/join.html'">Dołącz</button>
       <button onclick="location.href='/content/photos'">Zdjęcia</button>
       <button onclick="location.href='/books'">Biblioteczka</button>
-      <button onclick="location.href='/wss'">Wrocławskie Spotkanie Szkockie</button>
-      <button onclick="location.href='content/bedlewo'">Baby Steps</button>
+      <button onclick="location.href='/wss'" style="background-color: #3D6373; color: white;">Wrocławskie Spotkanie Szkockie</button>
+      <button onclick="location.href='content/bedlewo'" style="background-color: #3D6373; color: white;">Baby Steps</button>
     </div>
 
     <div class="main_container">
