--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -57,7 +57,7 @@
       <button onclick="location.href='/content/photos'">Zdjęcia</button>
       <button onclick="location.href='/books'">Biblioteczka</button>
       <button onclick="location.href='/wss'" style="background-color: #86a5b3;">Wrocławskie Spotkanie Szkockie</button>
-      <button onclick="location.href='https://sites.google.com/impan.pl/babysteps2025/'" style="background-color: #86a5b3; color: white;">Baby Steps</button>
+      <button onclick="location.href='https://sites.google.com/impan.pl/babysteps2025/'" style="background-color: #86a5b3;">Baby Steps</button>
     </div>
 
     <div class="main_container">
