--- a/src/templates/wss/base-wss.html
+++ b/src/templates/wss/base-wss.html
@@ -53,7 +53,7 @@
       <button onclick="location.href='/wss'">Informacje</button>
       <button onclick="location.href='/wss/registration.html'">Rejestracja</button>
       <button onclick="location.href='/wss/programme.html'">Program konferencji</button>
-      <button onclick="location.href='/'">KNMT</button>
+      <button onclick="location.href='/'"  style="background-color: #86a5b3;">KNMT</button>
     </div>
 
     <div class="main_container">
