--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -27,7 +27,7 @@ a {
 {% block mainText %}
 
 <div>
-  <b>Wrocławskie Spotkania Szkockie</b> to ogólnopolska konferencja dla studentów matematyki organizowana przez Koło Naukowe Matematyków Teoretyków Uniwersytetu Wrocławskiego. Pierwsza edycja konferencji jest planowana na <b>marzec 2025 roku</b>. Serdecznie zapraszamy!
+  <b>Wrocławskie Spotkania Szkockie</b> to ogólnopolska konferencja dla studentów matematyki organizowana przez Koło Naukowe Matematyków Teoretyków Uniwersytetu Wrocławskiego. Pierwsza edycja konferencji jest planowana na <b>28-30 marca 2025 roku</b>. Serdecznie zapraszamy!
 </div>
 
 {% endblock %}
