--- a/src/templates/wss/registration.html
+++ b/src/templates/wss/registration.html
@@ -27,14 +27,12 @@ a {
 {% block mainText %}
 
 <div class="flexcolumn" style="width: 100%;">
-  <div>Rejestracja uczestników zamyka się 23.03.2025</div>
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeZl5GER_q5tCvlxGMZymzDbNorH79tNVQZ5PqBQ2OoJhN7uQ/viewform?usp=dialog', '_blank')">
-    Rejestracja uczestników
+    Rejestracja uczestników (do 23.03.2025)
   </button>
   <br />
-  <div>Rejestracja referatów i plakatów zamyka się 21.03.2025</div>
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeJG2WZDMP8XrFjeKrEHwQ94E_rEEhIn5_mJvIpURDzgxk6gw/viewform?usp=sharing', '_blank')">
-    Rejestracja referatów i plakatów
+    Rejestracja referatów i plakatów (do 21.03.2025)
   </button>
 </div>
 
