--- a/src/templates/wss/registration.html
+++ b/src/templates/wss/registration.html
@@ -30,7 +30,7 @@ a {
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeZl5GER_q5tCvlxGMZymzDbNorH79tNVQZ5PqBQ2OoJhN7uQ/viewform?usp=dialog', '_blank')">
     Rejestracja uczestników (do 23.03.2025)
   </button>
-  <br />
+  <div style="height: 20px;"></div>
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeJG2WZDMP8XrFjeKrEHwQ94E_rEEhIn5_mJvIpURDzgxk6gw/viewform?usp=sharing', '_blank')">
     Rejestracja referatów i plakatów (do 21.03.2025)
   </button>
