--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -26,6 +26,19 @@ a {
 
 {% block mainText %}
 
-Program konferencji zostanie umieszczony w przyszłości...
+<table>
+  <tr>
+    <td colspan="2">Piątek 28.03.2025</td>
+  </tr>
+  <tr>
+    <td>
+      15:15-17:00
+    </td>
+    <td>
+      Rozpoczęcie konferencji<br /> Wykład prof. Jacka Świątkowskieg
+    </td>
+  </tr>
+</table>
+
 
 {% endblock %}
