--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -35,7 +35,35 @@ a {
       15:15-17:00
     </td>
     <td>
-      Rozpoczęcie konferencji<br /> Wykład prof. Jacka Świątkowskieg
+      Rozpoczęcie konferencji<br /> Wykład prof. Jacka Świątkowskiego
+    </td>
+  </tr>
+
+  <tr>
+    <td colspan="2">Sobota 29.03.2025</td>
+  </tr>
+  <tr>
+    <td>
+      08:30-09:00
+    </td>
+    <td>
+      Śniadanie
+    </td>
+  </tr>
+  <tr>
+    <td>
+      09:15-10:00
+    </td>
+    <td>
+      Blok referatów
+    </td>
+  </tr>
+  <tr>
+    <td>
+      10:15-11:00
+    </td>
+    <td>
+      Blok referatów
     </td>
   </tr>
 </table>
