--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -55,6 +55,49 @@ a {
       09:15-10:00
     </td>
     <td>
+      Blok referatów 45
+    </td>
+  </tr>
+  <tr>
+    <td>
+      10:15-11:00
+    </td>
+    <td>
+      Blok referatów 45
+    </td>
+  </tr>
+  <tr>
+    <td>
+      11:15-11:40
+    </td>
+    <td>
+      Blok referatów 25
+    </td>
+  </tr>
+  <tr>
+    <td>
+      11:40-12:00
+    </td>
+    <td>
+      Przerwa kawowa
+    </td>
+  </tr>
+  <tr>
+    <td colspan="2">Niedziela 30.03.2025</td>
+  </tr>
+  <tr>
+    <td>
+      08:30-09:00
+    </td>
+    <td>
+      Śniadanie
+    </td>
+  </tr>
+  <tr>
+    <td>
+      09:15-10:00
+    </td>
+    <td>
       Blok referatów
     </td>
   </tr>
