--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koło Naukowe Matematyków Teoretyków</title>
+    <title>Koło Naukowe Matematyków Teoretyków2</title>
     <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
