--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Koło Naukowe Matematyków Teoretyków2</title>
+    <title>Koło Naukowe Matematyków Teoretyków</title>
     <link rel="icon" href="/assets/img/logo/logo.png" type="image/icon type">
 
     <link rel="stylesheet" href="/stylesheets/basic-style.css">
@@ -29,7 +29,7 @@
   <body>
     <div class="main_header">
         <div class="search_contact">
-          <a href="/info">dane kontaktowe</a>
+          <a href="/info">Dane Kontaktowe</a>
 
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj" />
 
