--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -74,7 +74,7 @@
           <h3>Dane kontaktowe</h3>
           pl. Grunwaldzki 2<br>
           50-384 Wrocław<br>
-          POLSKA<br>
+          Polska<br>
           <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
         </div>
 
