program-oplaty-poprawki

--- a/src/templates/wss/base-wss.html
+++ b/src/templates/wss/base-wss.html
@@ -23,7 +23,7 @@
     {% endblock %}
 
     <meta name="keywords" content="koło, naukowe, kolo, matematyka, matematyków, matematykow, worclaw, wrocław, teoretycznych, teoretyczna">
-    <meta name="description" content="Strona internetowa Koła Naukowego Matematyków Teoretyków na Uniwersytecie Wrocławskim">
+    <meta name="description" content="Wrocławskie Spotkania Szkocie to konferencja matematyczna dedykowana dla studentów matematyki i kierunków pokrewnych">
     <meta charset="UTF-8">
   </head>
   <body>
@@ -41,7 +41,7 @@
         <img src="/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
           <h1>Wrocławskie Spotkania Szkockie</h1>
-          <h3>Organizowane przez KNMT UWr</h3>
+          <h3>Organizowane przez KNMT IM UWr z pomocą Fundacji Wrocławskich Matematyków</h3>
         </div>
       </div>
 
