--- a/src/templates/wss/registration.html
+++ b/src/templates/wss/registration.html
@@ -25,6 +25,7 @@ a {
 {% endblock %}
 
 {% block mainText %}
+Opłata konferencyjna wynosi 50zł. Cenę obiadu szacujemy na około 40zł. Informacje jak dokonać opłaty pojawią się wkrótce.
 
 <div class="flexcolumn" style="width: 100%;">
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeZl5GER_q5tCvlxGMZymzDbNorH79tNVQZ5PqBQ2OoJhN7uQ/viewform?usp=dialog', '_blank')">
