--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -28,6 +28,10 @@ a {
 
 <div>
   <b>Wrocławskie Spotkania Szkockie</b> to ogólnopolska konferencja dla studentów matematyki organizowana przez Koło Naukowe Matematyków Teoretyków Uniwersytetu Wrocławskiego. Pierwsza edycja konferencji jest planowana na <b>28-30 marca 2025 roku</b>. Serdecznie zapraszamy!
+  <br>
+  <br>
+
+  Opłata konferencyjna wynosi 50zł. Cenę obiadu szacujemy na około 40zł.
 </div>
 
 {% endblock %}
