--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -26,90 +26,165 @@ a {
 
 {% block mainText %}
 
-<table>
-  <tr>
-    <td colspan="2">Piątek 28.03.2025</td>
-  </tr>
-  <tr>
-    <td>
-      15:15-17:00
-    </td>
-    <td>
-      Rozpoczęcie konferencji<br /> Wykład prof. Jacka Świątkowskiego
-    </td>
-  </tr>
 
-  <tr>
-    <td colspan="2">Sobota 29.03.2025</td>
-  </tr>
-  <tr>
-    <td>
-      08:30-09:00
-    </td>
-    <td>
-      Śniadanie
-    </td>
-  </tr>
-  <tr>
-    <td>
-      09:15-10:00
-    </td>
-    <td>
-      Blok referatów 45
-    </td>
-  </tr>
-  <tr>
-    <td>
-      10:15-11:00
-    </td>
-    <td>
-      Blok referatów 45
-    </td>
-  </tr>
-  <tr>
-    <td>
-      11:15-11:40
-    </td>
-    <td>
-      Blok referatów 25
-    </td>
-  </tr>
-  <tr>
-    <td>
-      11:40-12:00
-    </td>
-    <td>
-      Przerwa kawowa
-    </td>
-  </tr>
-  <tr>
-    <td colspan="2">Niedziela 30.03.2025</td>
-  </tr>
-  <tr>
-    <td>
-      08:30-09:00
-    </td>
-    <td>
-      Śniadanie
-    </td>
-  </tr>
-  <tr>
-    <td>
-      09:15-10:00
-    </td>
-    <td>
-      Blok referatów
-    </td>
-  </tr>
-  <tr>
-    <td>
-      10:15-11:00
-    </td>
-    <td>
-      Blok referatów
-    </td>
-  </tr>
-</table>
+W nawiasach kwadratowych podana jest sala, w jakiej wydarzenie odbędzie się.
 
+<style>
+td {
+  vertical-align: top;
+  font-size:17;
+  height: 35px;
+}
+a {
+color: #869e67;
+}
+</style>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <table style="margin-left: auto; margin-right:auto; align: center; width: 80%; border: none; table-layout: fixed;">
+    <colgroup>
+      <col style="width: 100px;" />
+      <col style="width: calc(100% - 100px);" />
+    </colgroup>
+    <tr style="height: 45px;"><td style="text-align:center; vertical-align: bottom; font-size: 19;" colspan="2"><b>Piątek 28 Marca</b></td></tr>
+    <tr>
+      <td>
+        15:00-16:30
+      </td>
+      <td>
+        Rozpoczęcie konferencji, wykład prof. Bożejki [25]
+      </td>
+    </tr>
+    <tr>
+      <td>
+        16:00-17:00
+      </td>
+      <td>
+        Obiad
+      </td>
+    </tr>
+    <tr>
+      <td>
+        17:15-17:40
+      </td>
+      <td>
+        Referaty 25min
+      </td>
+    </tr>
+    <tr>
+      <td>
+        18:15-??:??
+      </td>
+      <td>
+        Integracja [119]
+      </td>
+    </tr>
+
+    <tr style="height: 50px;"><td style="text-align: center; vertical-align: bottom; font-size:19;" colspan="2"><b>Sobota 29 Marca</td></b></tr>
+    <tr>
+      <td>09:00-09:30</td>
+      <td>Śniadanie</td>
+    </tr>
+    <tr>
+      <td>10:00-10:45</td>
+      <td>
+        Referaty 45min
+      </td>
+    </tr>
+    <tr>
+      <td>11:00-11:25</td>
+      <td>
+        Referaty 25min
+      </td>
+    </tr>
+    <tr>
+      <td>11:25-12:15</td>
+      <td>
+        Przerwa kawowa
+      </td>
+    </tr>
+    <tr>
+      <td>12:15-14:00</td>
+      <td>
+        Warsztaty
+      </td>
+    </tr>
+    <tr>
+      <td>14:00-14:30</td>
+      <td>Obiad</td>
+    </tr>
+    <tr>
+      <td>14:30-15:00</td>
+      <td>Przerwa kawowa</td>
+    </tr>
+    <tr>
+      <td>15:00-16:00</td>
+      <td>Warsztaty</td>
+    </tr>
+    <tr>
+      <td>16:20-16:45</td>
+      <td>Referaty 25min</td>
+    </tr>
+    <tr>
+      <td>17:00-17:25</td>
+      <td>Referaty 25min</td>
+    </tr>
+    <tr>
+      <td>17:40-18:25</td>
+      <td>
+        Referaty 45min
+      </td>
+    </tr>
+    <tr>
+      <td>20:00-??:??</td>
+      <td>Integracja w barze</td>
+    </tr>
+
+
+    <tr style="height: 50px;"><td style="text-align: center; vertical-align: bottom; font-size:19;" colspan="2"><b>Niedziela 30 Marca</td></span></b></tr>
+    <tr>
+      <td>09:00-09:30</td>
+      <td>Śniadanie</td>
+    </tr>
+    <tr>
+      <td>10:00-10:45</td>
+      <td>
+        Referaty 45min
+      </td>
+    </tr>
+    <tr>
+      <td>11:00-11:25</td>
+      <td>
+        Referaty 25min
+      </td>
+    </tr>
+    <tr>
+      <td>11:25-12:15</td>
+      <td>
+        Przerwa kawowa
+      </td>
+    </tr>
+    <tr>
+      <td>12:15-12:30</td>
+      <td>
+        Obiad
+      </td>
+    </tr>
+    <tr>
+      <td>12:30-13:00</td>
+      <td>
+        Sesja plakatowa
+      </td>
+    </tr>
+    <tr>
+      <td>13:45-14:10</td>
+      <td>
+        Referaty 25min
+      </td>
+    </tr>
+    <tr>
+      <td>14:30-16:00</td>
+      <td>Pożegnanie i wykład prof. Świątkowskiego o geometrycznej teorii grup [25]</td>
+    </tr>
+  </table>
 
 {% endblock %}
