--- a/src/templates/wss/base-wss.html
+++ b/src/templates/wss/base-wss.html
@@ -65,6 +65,7 @@
 
     <footer>
       <div class="info_foot">
+      <img style="height: 108px;" src="/assets/img/fundacja_matematykow_logo.png" onclick="window.open('http://fmw.math.uni.wroc.pl/', '_blank')" />
 
         <div class="foot_contact">
           <h3>Dane kontaktowe</h3>
@@ -78,7 +79,7 @@
           <h3>Wyszukaj</h3>
           <input class="search_bar" type="text" id="search" name="search" value placeholder="Szukaj">
         </div>
-      <img src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
+      <img style="height: 108px;" src="/assets/img/logo/logo_knmt.svg" onclick="window.open('https://www.facebook.com/knmtuwr', '_blank')" />
 
       </div>
 
