--- a/src/templates/wss/base-wss.html
+++ b/src/templates/wss/base-wss.html
@@ -41,7 +41,7 @@
         <img src="/assets/img/uwr-logo.svg" height="80px;" onclick="window.open('https://www.math.uni.wroc.pl/', '_blank')">
         <div>
           <h1>Wrocławskie Spotkania Szkockie</h1>
-          <h3>Organizowane przez KNMT IM UWr z pomocą Fundacji Wrocławskich Matematyków</h3>
+          <h3>Organizowane przez KNMT IM UWr z pomocą Fundacji Matematyków Wrocławskich</h3>
         </div>
       </div>
 
