--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -34,4 +34,6 @@ a {
   Opłata konferencyjna wynosi 50zł, cenę obiadu szacujemy na około 40zł. Dane do płatności pojawią się wkrótce.
 </div>
 
+<img style="width=100%;" src="/assets/img/wss-poster.png">
+
 {% endblock %}
