--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -31,7 +31,11 @@ a {
   <br>
   <br>
 
-  Opłata konferencyjna wynosi 50zł, cenę obiadu szacujemy na około 40zł. Dane do płatności pojawią się wkrótce.
+  W ramach konferencji można zgłaszać chęć przeprowadzenia referatu na swoje ulubione zagadnienie matematyczne bez znaczenia na stopień jego zaawansowania. Wszystkie prezentacje są mile widziane c:
+  <br>
+  <br>
+
+  Opłata konferencyjna wynosi 50zł i pokrywa koszt śniadań, przerw kawowych i dodatkowe gadżety. Cena obiadu wyniesie około 20zł dzięki pomocy dziekana prof. Buraczewskiego. Kanapki planowane na śniadania zostaną zamówione w restauracji Hert. Szczegółowe informacje jak uiścić opłatę pojawią się w niedługiej przyszłości.
 </div>
 
 <img width="500" src="/assets/img/wss-poster.png">
