--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -35,7 +35,13 @@ a {
   <br>
   <br>
 
-  Opłata konferencyjna wynosi 50zł i pokrywa koszt śniadań, przerw kawowych i dodatkowe gadżety. Cena obiadu wyniesie około 20zł dzięki pomocy dziekana prof. Buraczewskiego. Kanapki planowane na śniadania zostaną zamówione w restauracji Hert. Szczegółowe informacje jak uiścić opłatę pojawią się w niedługiej przyszłości.
+  Opłata konferencyjna wynosi 30zł i pokrywa koszt śniadań, przerw kawowych oraz dodatkowe gadżety. Cena obiadu wyniesie około 20zł dzięki pomocy dziekana prof. Buraczewskiego. Kanapki planowane na śniadania zostaną zamówione w restauracji Hert. 
+  <br>
+  <br>
+  Wpłaty prosimy uiszczać na konto <b>Fundacji Matematyków Wrocławskich, pl. Grunwaldzki 2, 50-384 Wrocław</b>, w tytule pisząc <b>Konferencja KNMT - [<i>imię nazwisko</i>]</b>.
+  <br>
+  <br>
+  W razie ptorzeby wystawienia faktury za uczestnictwo w konferencji, prosimy o jak najszybsze przekazanie danych do faktury na mail <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
 </div>
 
 <img width="500" src="/assets/img/wss-poster.png">
