--- a/src/templates/wss/index.html
+++ b/src/templates/wss/index.html
@@ -26,24 +26,73 @@ a {
 
 {% block mainText %}
 
-<div>
-  <b>Wrocławskie Spotkania Szkockie</b> to ogólnopolska konferencja dla studentów matematyki organizowana przez Koło Naukowe Matematyków Teoretyków Uniwersytetu Wrocławskiego. Pierwsza edycja konferencji jest planowana na <b>28-30 marca 2025 roku</b>. Serdecznie zapraszamy!
+<h2 style="text-align: center;">O Konferencji</h2>
+<br> 
+
+<b>Wrocławskie Spotkania Szkockie</b> to ogólnopolska konferencja dla studentów matematyki organizowana przez Koło Naukowe Matematyków Teoretyków Uniwersytetu Wrocławskiego. Pierwsza edycja konferencji jest planowana na <b>28-30 marca 2025 roku</b>. <br>
+<i>Serdecznie zapraszamy!</i>
+<br>
+
+<h2 style="text-align: center;">Dla kogo jest konferencja?</h2>
+<br> 
+
+Dla wszystkich zainteresowanych matematyką!
+<br>
+W ramach konferencji można zgłaszać chęć przeprowadzenia referatu na swoje ulubione zagadnienie matematyczne. Nie ma znaczenia stopień jego zaawansowania. Jeśli nauczyłeś się czegoś, co sprawia Ci radość i czym chcesz zainspirować innych, jest to dobry pomysł na temat referatu. <br>
+Wszystkie prezentacje są mile widziane c:
+
+<h2 style="text-align: center;">Opłaty</h2>
+<br>
+
+Opłata konferencyjna, przeznaczona na:
+<ul>
+  <li>kanapki śniadaniowe,</li>
+  <li>kawę i herbatę w trakcie przerw,</li>
+  <li>poczęstunek,</li>
+  <li>drobne upominki,</li>
+</ul>
+wynosi <b>30 złotych</b>. Dodatkowym kosztem są obiady w restauracji Plastyczna, częściowo pokryte dzięki pomocy dziekana prof. Buraczewskiego przez Wydział Matematyki i Informatyki, który wynosi <b>20 złotych</b>.
+<br>
+<table>
+    <colgroup>
+      <col style="width: 200px;" />
+      <col style="width: 100px;" />
+    </colgroup>
+  <tr>
+    <td>Opłata konferencyjna</td>
+    <td>30 złotych</td>
+  </tr>
+  <tr>
+    <td>Obiad piątek</td>
+    <td>20 złotych</td>
+  </tr>
+  <tr>
+    <td>Obiad sobota</td>
+    <td>20 złotych</td>
+  </tr>
+  <tr>
+    <td>Obiad niedziela</td>
+    <td>20 złotych</td>
+  </tr>
+</table>
+<br>
+<br>
+Wszystkie opłaty prosimy uiszczać na konto
+  <b>Fundacji Matematyków Wrocławskich, pl. Grunwaldzki 2, 50-384 Wrocław</b>
+<br>
+<center>
+  PL44 1010 0071 2222 8982 1091 6700
+</center>
+w tytule przelewu wpisując <b>Konferencja KNMT - [<i>imię nazwisko</i>]</b>.
+
+  <br>
+  <br>
+  W razie ptorzeby wystawienia faktury za uczestnictwo w konferencji, prosimy o jak najszybsze przekazanie danych na mail <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
   <br>
   <br>
 
-  W ramach konferencji można zgłaszać chęć przeprowadzenia referatu na swoje ulubione zagadnienie matematyczne bez znaczenia na stopień jego zaawansowania. Wszystkie prezentacje są mile widziane c:
-  <br>
-  <br>
-
-  Opłata konferencyjna wynosi 30zł i pokrywa koszt śniadań, przerw kawowych oraz dodatkowe gadżety. Cena obiadu wyniesie około 20zł dzięki pomocy dziekana prof. Buraczewskiego. Kanapki planowane na śniadania zostaną zamówione w restauracji Hert. 
-  <br>
-  <br>
-  Wpłaty prosimy uiszczać na konto 44 1010 0071 2222 8982 1091 6700 <b>Fundacji Matematyków Wrocławskich, pl. Grunwaldzki 2, 50-384 Wrocław</b>, w tytule pisząc <b>Konferencja KNMT - [<i>imię nazwisko</i>]</b>.
-  <br>
-  <br>
-  W razie ptorzeby wystawienia faktury za uczestnictwo w konferencji, prosimy o jak najszybsze przekazanie danych do faktury na mail <a href="mailto:knmt.wmii.uwr@gmail.com">knmt.wmii.uwr@gmail.com</a>
-</div>
-
-<img width="500" src="/assets/img/wss-poster.png">
+  <div style="width: 100%; display: flex; flex-direction: row; justify-content: center;">
+    <img width="750" src="/assets/img/wss-poster.png">
+  </div>
 
 {% endblock %}
