--- a/src/templates/wss/registration.html
+++ b/src/templates/wss/registration.html
@@ -25,7 +25,8 @@ a {
 {% endblock %}
 
 {% block mainText %}
-Opłata konferencyjna wynosi 50zł. Cenę obiadu szacujemy na około 40zł. Informacje jak dokonać opłaty pojawią się wkrótce.
+Opłata konferencyjna wynosi 30zł, a jeden obiad - 20zł. Informacje jak dokonać opłaty znajdują się na <a href="/wss">stronie głównej konferencji</a>.
+
 
 <div class="flexcolumn" style="width: 100%;">
   <button class="wss_button" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSeZl5GER_q5tCvlxGMZymzDbNorH79tNVQZ5PqBQ2OoJhN7uQ/viewform?usp=dialog', '_blank')">
