--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -136,7 +136,10 @@ color: #869e67;
     </tr>
     <tr>
       <td>20:00-??:??</td>
-      <td>Integracja w barze</td>
+      <td>
+        Integracja w barze <a href="https://www.facebook.com/PrzekretPubStudencki/?locale=pl_PL">Przekręt</a><br>
+        ul. Curie-Skłodowskiej 1, 50-381 Wrocław
+      </td>
     </tr>
 
 
