--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -35,9 +35,6 @@ td {
   font-size:17;
   height: 35px;
 }
-a {
-color: #869e67;
-}
 </style>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <table style="margin-left: auto; margin-right:auto; align: center; width: 80%; border: none; table-layout: fixed;">
@@ -137,7 +134,7 @@ color: #869e67;
     <tr>
       <td>20:00-??:??</td>
       <td>
-        Integracja w barze <a href="https://www.facebook.com/PrzekretPubStudencki/?locale=pl_PL">Przekręt</a><br>
+        Integracja w barze <a href="https://www.facebook.com/PrzekretPubStudencki/?locale=pl_PL" target="_blank">Przekręt</a><br>
         ul. Curie-Skłodowskiej 1, 50-381 Wrocław
       </td>
     </tr>
