--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -61,10 +61,10 @@ td {
     </tr>
     <tr>
       <td>
-        17:15-17:40
+        17:15-18:00
       </td>
       <td>
-        Referaty 25min
+        <a href="https://drive.google.com/file/d/1Zue-qvnqXyHuMD7Vl_PCndqtQGhyiLFj/view?usp=drive_link" target="_blank">Zbalansowana nierówność Hardy'ego</a> - Antoni Szczukiewicz [25]
       </td>
     </tr>
     <tr>
@@ -84,13 +84,14 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        Referaty 45min
+        <a href="https://drive.google.com/file/d/1btJEwZYQ85RO-Nbqyo2lfbwl1nq93vPm/view?usp=drive_link" target="_blank">Progi w grafach losowych</a> - Grzegorz Ryn [25]
       </td>
     </tr>
     <tr>
       <td>11:00-11:25</td>
       <td>
-        Referaty 25min
+        <a href="https://drive.google.com/file/d/1uHXjs8FLCmbtadjcv-seVDczuPsmqKYy/view?usp=drive_link" target="_blank">Prosto o krzywych - krzywe Beziera</a> - Mikołaj Mijakowski [25]<br />
+        <a href="https://drive.google.com/file/d/1T8uQUEZs7pnNUcXoD6EukBAxlv7rw5SA/view?usp=drive_link" target="_blank">Tylko trochę grupy, czyli o Grupoidach</a> - Kacper Jodłowski [119]
       </td>
     </tr>
     <tr>
