--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -120,16 +120,23 @@ td {
     </tr>
     <tr>
       <td>16:20-16:45</td>
-      <td>Referaty 25min</td>
+      <td>
+        <a href="https://drive.google.com/file/d/1Pb5Eanz5aiytG4XJYo11ZJIZcUjiQdne/view?usp=drive_link" target="_blank">Bazy o ciągłych rzutowaniach w przestrzeniach unormowanych</a> - Jakub Pawlak [25] <br/>
+        <a href="https://drive.google.com/file/d/1fxHfWnP3wLs-D3mBGMVehOnF5hzlzw-o/view?usp=drive_link" target="_blank">Niezmiennik Dehna</a> - Michał Mądrala [119]
+      </td>
     </tr>
     <tr>
       <td>17:00-17:25</td>
-      <td>Referaty 25min</td>
+      <td>
+        <a href="https://drive.google.com/file/d/1n6JTxcwPt-X6WkuaNGMHbKOi45QwxFGr/view?usp=drive_link" target="_blank">p-adyczny Fourier</a> - Łukasz Orski [25] <br/>
+        <a href="https://drive.google.com/file/d/1Gve8q4tRLemixLtzzW8nm8aCrZW8xPGM/view?usp=drive_link" target="_blank">Centralne Twierdzenie Graniczne za pomocą Twierdzenia Banacha o Punkcie Stałym</a> - Piotr Held [119]
+      </td>
     </tr>
     <tr>
       <td>17:40-18:25</td>
       <td>
-        Referaty 45min
+        <a href="https://drive.google.com/file/d/1CVHxsmkfOH7QmYIlAbThKcI8TEtN5fDZ/view?usp=drive_link" target="_blank">Z wielką mocą wiąże się wielka odpowiedzialność</a> - Antoni Brożyna [25] <br/>
+        <a href="" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz [119]
       </td>
     </tr>
     <tr>
@@ -149,13 +156,15 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        Referaty 45min
+        <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik [25]
+        <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański [119] <br/>
       </td>
     </tr>
     <tr>
       <td>11:00-11:25</td>
       <td>
-        Referaty 25min
+        <a href="https://drive.google.com/file/d/10mUWzafbQm9idhMMvAJkwlBH3q4IQRdm/view?usp=drive_link" target="_blank">NL = coNL (i czemu to nie jest oczywiste)</a> - Magdalena Dudziak [25] <br/>
+        <a href="https://drive.google.com/file/d/10Czs5tA2dOxCVxLAW0FYfhSGtax4SMqE/view?usp=drive_link" target="_blank">Definicja Prawdy Alfreda Tarskiego: Od Logiki Formalnej do Teorii Modeli</a> - Julia Deoniziak [119]
       </td>
     </tr>
     <tr>
@@ -179,7 +188,7 @@ td {
     <tr>
       <td>13:45-14:10</td>
       <td>
-        Referaty 25min
+        <a href="https://drive.google.com/file/d/1Dnu50xw4swQG9rKstD1s3nln2ELrtqQN/view?usp=drive_link" target="_blank">Pokrycie przestrzeni kulami</a> - Michał Biesek [25] <br/>
       </td>
     </tr>
     <tr>
