--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -48,7 +48,7 @@ td {
         15:00-16:30
       </td>
       <td>
-        Rozpoczęcie konferencji, wykład prof. Bożejki [25]
+        [25] Rozpoczęcie konferencji, wykład prof. Bożejki
       </td>
     </tr>
     <tr>
@@ -64,7 +64,7 @@ td {
         17:15-18:00
       </td>
       <td>
-        <a href="https://drive.google.com/file/d/1Zue-qvnqXyHuMD7Vl_PCndqtQGhyiLFj/view?usp=drive_link" target="_blank">Zbalansowana nierówność Hardy'ego</a> - Antoni Szczukiewicz [25]<br />
+        [25] <a href="https://drive.google.com/file/d/1Zue-qvnqXyHuMD7Vl_PCndqtQGhyiLFj/view?usp=drive_link" target="_blank">Zbalansowana nierówność Hardy'ego</a> - Antoni Szczukiewicz<br />
         <i>analiza</i>
       </td>
     </tr>
@@ -73,7 +73,7 @@ td {
         18:15-??:??
       </td>
       <td>
-        Integracja [119]
+        [119] Integracja
       </td>
     </tr>
 
@@ -85,16 +85,16 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        <a href="https://drive.google.com/file/d/1btJEwZYQ85RO-Nbqyo2lfbwl1nq93vPm/view?usp=drive_link" target="_blank">Progi w grafach losowych</a> - Grzegorz Ryn [25]<br>
+        [25] <a href="https://drive.google.com/file/d/1btJEwZYQ85RO-Nbqyo2lfbwl1nq93vPm/view?usp=drive_link" target="_blank">Progi w grafach losowych</a> - Grzegorz Ryn<br>
         <i>kombinatoryka i teoria grafów, rachunek prawdopodobieństwa</i>
       </td>
     </tr>
     <tr>
       <td>11:00-11:25</td>
       <td>
-        <a href="https://drive.google.com/file/d/1uHXjs8FLCmbtadjcv-seVDczuPsmqKYy/view?usp=drive_link" target="_blank">Prosto o krzywych - krzywe Beziera</a> - Mikołaj Mijakowski [25]<br />
+        [25] <a href="https://drive.google.com/file/d/1uHXjs8FLCmbtadjcv-seVDczuPsmqKYy/view?usp=drive_link" target="_blank">Prosto o krzywych - krzywe Beziera</a> - Mikołaj Mijakowski<br />
         <i>analiza, geometria</i><br />
-        <a href="https://drive.google.com/file/d/1T8uQUEZs7pnNUcXoD6EukBAxlv7rw5SA/view?usp=drive_link" target="_blank">Tylko trochę grupy, czyli o Grupoidach</a> - Kacper Jodłowski [119]<br />
+        [119] <a href="https://drive.google.com/file/d/1T8uQUEZs7pnNUcXoD6EukBAxlv7rw5SA/view?usp=drive_link" target="_blank">Tylko trochę grupy, czyli o Grupoidach</a> - Kacper Jodłowski<br />
         <i>algebra</i>
       </td>
     </tr>
@@ -125,27 +125,27 @@ td {
     <tr>
       <td>16:20-16:45</td>
       <td>
-        <a href="https://drive.google.com/file/d/1Pb5Eanz5aiytG4XJYo11ZJIZcUjiQdne/view?usp=drive_link" target="_blank">Bazy o ciągłych rzutowaniach w przestrzeniach unormowanych</a> - Jakub Pawlak [25] <br/>
+        [25] <a href="https://drive.google.com/file/d/1Pb5Eanz5aiytG4XJYo11ZJIZcUjiQdne/view?usp=drive_link" target="_blank">Bazy o ciągłych rzutowaniach w przestrzeniach unormowanych</a> - Jakub Pawlak <br/>
         <i>analiza, topologia</i><br />
-        <a href="https://drive.google.com/file/d/1fxHfWnP3wLs-D3mBGMVehOnF5hzlzw-o/view?usp=drive_link" target="_blank">Niezmiennik Dehna</a> - Michał Mądrala [119]<br />
+        [119] <a href="https://drive.google.com/file/d/1fxHfWnP3wLs-D3mBGMVehOnF5hzlzw-o/view?usp=drive_link" target="_blank">Niezmiennik Dehna</a> - Michał Mądrala<br />
         <i>geometria</i>
       </td>
     </tr>
     <tr>
       <td>17:00-17:25</td>
       <td>
-        <a href="https://drive.google.com/file/d/1n6JTxcwPt-X6WkuaNGMHbKOi45QwxFGr/view?usp=drive_link" target="_blank">p-adyczny Fourier</a> - Łukasz Orski [25] <br/>
+        [25] <a href="https://drive.google.com/file/d/1n6JTxcwPt-X6WkuaNGMHbKOi45QwxFGr/view?usp=drive_link" target="_blank">p-adyczny Fourier</a> - Łukasz Orski<br/>
         <i>analiza</i><br />
-        <a href="https://drive.google.com/file/d/1Gve8q4tRLemixLtzzW8nm8aCrZW8xPGM/view?usp=drive_link" target="_blank">Centralne Twierdzenie Graniczne za pomocą Twierdzenia Banacha o Punkcie Stałym</a> - Piotr Held [119]<br />
+        [119] <a href="https://drive.google.com/file/d/1Gve8q4tRLemixLtzzW8nm8aCrZW8xPGM/view?usp=drive_link" target="_blank">Centralne Twierdzenie Graniczne za pomocą Twierdzenia Banacha o Punkcie Stałym</a> - Piotr Held<br />
         <i>rachunek prawdopodobieństwa</i>
       </td>
     </tr>
     <tr>
       <td>17:40-18:25</td>
       <td>
-        <a href="https://drive.google.com/file/d/1CVHxsmkfOH7QmYIlAbThKcI8TEtN5fDZ/view?usp=drive_link" target="_blank">Z wielką mocą wiąże się wielka odpowiedzialność</a> - Antoni Brożyna [25] <br/>
+        [25] <a href="https://drive.google.com/file/d/1CVHxsmkfOH7QmYIlAbThKcI8TEtN5fDZ/view?usp=drive_link" target="_blank">Z wielką mocą wiąże się wielka odpowiedzialność</a> - Antoni Brożyna <br/>
         <i>teoria mnogości</i><br />
-        <a href="" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz [119]<br />
+        [119] <a href="" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz<br />
         <i>algebra, geometria, topologia</i>
       </td>
     </tr>
@@ -166,18 +166,18 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik [25]<br />
+        [25] <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik<br />
         <i>geometria</i><br />
-        <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański [119] <br/>
+        [119] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
         <i>algebra, analiza, kombinatoryka i teoria grafów</i>
       </td>
     </tr>
     <tr>
       <td>11:00-11:25</td>
       <td>
-        <a href="https://drive.google.com/file/d/10mUWzafbQm9idhMMvAJkwlBH3q4IQRdm/view?usp=drive_link" target="_blank">NL = coNL (i czemu to nie jest oczywiste)</a> - Magdalena Dudziak [25] <br/>
+        [25] <a href="https://drive.google.com/file/d/10mUWzafbQm9idhMMvAJkwlBH3q4IQRdm/view?usp=drive_link" target="_blank">NL = coNL (i czemu to nie jest oczywiste)</a> - Magdalena Dudziak <br/>
         <i>kombinatoryka i teoria grafów</i><br />
-        <a href="https://drive.google.com/file/d/10Czs5tA2dOxCVxLAW0FYfhSGtax4SMqE/view?usp=drive_link" target="_blank">Definicja Prawdy Alfreda Tarskiego: Od Logiki Formalnej do Teorii Modeli</a> - Julia Deoniziak [119]<br />
+        [119] <a href="https://drive.google.com/file/d/10Czs5tA2dOxCVxLAW0FYfhSGtax4SMqE/view?usp=drive_link" target="_blank">Definicja Prawdy Alfreda Tarskiego: Od Logiki Formalnej do Teorii Modeli</a> - Julia Deoniziak<br />
         <i>logika i teoria mnogości</i>
       </td>
     </tr>
@@ -202,13 +202,13 @@ td {
     <tr>
       <td>13:45-14:10</td>
       <td>
-        <a href="https://drive.google.com/file/d/1Dnu50xw4swQG9rKstD1s3nln2ELrtqQN/view?usp=drive_link" target="_blank">Pokrycie przestrzeni kulami</a> - Michał Biesek [25] <br/>
+        [25] <a href="https://drive.google.com/file/d/1Dnu50xw4swQG9rKstD1s3nln2ELrtqQN/view?usp=drive_link" target="_blank">Pokrycie przestrzeni kulami</a> - Michał Biesek<br/>
         <i>analiza, geometria</i>
       </td>
     </tr>
     <tr>
       <td>14:30-16:00</td>
-      <td>Pożegnanie i wykład prof. Świątkowskiego o geometrycznej teorii grup [25]</td>
+      <td>[25] Pożegnanie i wykład prof. Świątkowskiego o geometrycznej teorii grup</td>
     </tr>
   </table>
 
