--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -85,7 +85,7 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        [25] <a href="https://drive.google.com/file/d/1btJEwZYQ85RO-Nbqyo2lfbwl1nq93vPm/view?usp=drive_link" target="_blank">Progi w grafach losowych</a> - Grzegorz Ryn<br>
+        [25] <a href="https://drive.google.com/file/d/1btJEwZYQ85RO-Nbqyo2lfbwl1nq93vPm/view?usp=drive_link" target="_blank">Progi w grafach losowych</a> - Grzegorz Ryn<br />
         <i>kombinatoryka i teoria grafów, rachunek prawdopodobieństwa</i>
       </td>
     </tr>
@@ -94,6 +94,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1uHXjs8FLCmbtadjcv-seVDczuPsmqKYy/view?usp=drive_link" target="_blank">Prosto o krzywych - krzywe Beziera</a> - Mikołaj Mijakowski<br />
         <i>analiza, geometria</i><br />
+        <br />
         [119] <a href="https://drive.google.com/file/d/1T8uQUEZs7pnNUcXoD6EukBAxlv7rw5SA/view?usp=drive_link" target="_blank">Tylko trochę grupy, czyli o Grupoidach</a> - Kacper Jodłowski<br />
         <i>algebra</i>
       </td>
@@ -127,6 +128,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1Pb5Eanz5aiytG4XJYo11ZJIZcUjiQdne/view?usp=drive_link" target="_blank">Bazy o ciągłych rzutowaniach w przestrzeniach unormowanych</a> - Jakub Pawlak <br/>
         <i>analiza, topologia</i><br />
+        <br />
         [119] <a href="https://drive.google.com/file/d/1fxHfWnP3wLs-D3mBGMVehOnF5hzlzw-o/view?usp=drive_link" target="_blank">Niezmiennik Dehna</a> - Michał Mądrala<br />
         <i>geometria</i>
       </td>
@@ -136,6 +138,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1n6JTxcwPt-X6WkuaNGMHbKOi45QwxFGr/view?usp=drive_link" target="_blank">p-adyczny Fourier</a> - Łukasz Orski<br/>
         <i>analiza</i><br />
+        <br />
         [119] <a href="https://drive.google.com/file/d/1Gve8q4tRLemixLtzzW8nm8aCrZW8xPGM/view?usp=drive_link" target="_blank">Centralne Twierdzenie Graniczne za pomocą Twierdzenia Banacha o Punkcie Stałym</a> - Piotr Held<br />
         <i>rachunek prawdopodobieństwa</i>
       </td>
@@ -145,6 +148,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1CVHxsmkfOH7QmYIlAbThKcI8TEtN5fDZ/view?usp=drive_link" target="_blank">Z wielką mocą wiąże się wielka odpowiedzialność</a> - Antoni Brożyna <br/>
         <i>teoria mnogości</i><br />
+        <br />
         [119] <a href="" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz<br />
         <i>algebra, geometria, topologia</i>
       </td>
@@ -168,6 +172,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik<br />
         <i>geometria</i><br />
+        <br />
         [119] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
         <i>algebra, analiza, kombinatoryka i teoria grafów</i>
       </td>
@@ -177,6 +182,7 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/10mUWzafbQm9idhMMvAJkwlBH3q4IQRdm/view?usp=drive_link" target="_blank">NL = coNL (i czemu to nie jest oczywiste)</a> - Magdalena Dudziak <br/>
         <i>kombinatoryka i teoria grafów</i><br />
+        <br />
         [119] <a href="https://drive.google.com/file/d/10Czs5tA2dOxCVxLAW0FYfhSGtax4SMqE/view?usp=drive_link" target="_blank">Definicja Prawdy Alfreda Tarskiego: Od Logiki Formalnej do Teorii Modeli</a> - Julia Deoniziak<br />
         <i>logika i teoria mnogości</i>
       </td>
