--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -175,10 +175,8 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        [25] <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik<br />
-        <i>geometria</i><br />
         <br />
-        [119] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
+        [25] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
         <i>algebra, analiza, kombinatoryka i teoria grafów</i>
       </td>
     </tr>
@@ -205,9 +203,19 @@ td {
       </td>
     </tr>
     <tr>
-      <td>12:30-13:00</td>
+      <td>12:30-12:55</td>
       <td>
-        Sesja plakatowa
+        [25] <a href="https://drive.google.com/file/d/1yJrvg41IRlwa7F3aMzm5Cy5qyLwwgdHo/view?usp=drive_link" target="_blank">Skończenie addytywne miary na $\mathcal{P}(\omega)$</a> - Szymon Smolarek<br />
+        <i>teoria mnogości, teoria miary</i><br />
+        <br />
+        [119] <a href="https://drive.google.com/file/d/1Yk3YXHmnV7Ai1ZDRESlg_unbjT0QOLku/view?usp=drive_link" target="_blank">Grupy homotopii $\pi_n$</a> - Jakub Rudzik<br />
+        <i>geometria</i><br />
+      </td>
+    </tr>
+    <tr>
+      <td>12:55-13:45</td>
+      <td>
+        Przerwa kawowa
       </td>
     </tr>
     <tr>
