--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -27,7 +27,8 @@ a {
 {% block mainText %}
 
 
-W nawiasach kwadratowych podana jest sala, w jakiej wydarzenie odbędzie się.
+W nawiasach kwadratowych podana jest sala, w jakiej wydarzenie odbędzie się.<br />
+Na obiady zapraszamy do restauracji <a href="https://www.facebook.com/Plastycznafood/?locale=pl_PL">Plastycznej</a>, która znajduje się w budynku Instytutu Informatyki (drzwi przy wejściu od strony Odry). Szatnia na odzież wierzchnią znajduje się w sali 105.<br/>
 
 <style>
 td {
@@ -107,7 +108,7 @@ td {
     <tr>
       <td>11:25-12:15</td>
       <td>
-        Przerwa kawowa
+        [główny hol Instytutu Informatyki] Przerwa kawowa
       </td>
     </tr>
     <tr>
@@ -175,7 +176,6 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        <br />
         [25] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
         <i>algebra, analiza, kombinatoryka i teoria grafów</i>
       </td>
