--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -28,7 +28,7 @@ a {
 
 
 W nawiasach kwadratowych podana jest sala, w jakiej wydarzenie odbędzie się.<br />
-Na obiady zapraszamy do restauracji <a href="https://www.facebook.com/Plastycznafood/?locale=pl_PL">Plastycznej</a>, która znajduje się w budynku Instytutu Informatyki (drzwi przy wejściu od strony Odry). Szatnia na odzież wierzchnią znajduje się w sali 105.<br/>
+Na obiady zapraszamy do restauracji <a href="https://www.facebook.com/Plastycznafood/?locale=pl_PL">Plastycznej</a>, która znajduje się w budynku Instytutu Informatyki (drzwi przy wejściu od strony Odry). Szatnia na odzież wierzchnią znajduje się w piątek w sali 140, a w sobotę i niedzielę - w sali 105.<br/>
 
 <style>
 td {
@@ -74,6 +74,9 @@ td {
       </td>
       <td>
         [25] <a href="https://drive.google.com/file/d/1Zue-qvnqXyHuMD7Vl_PCndqtQGhyiLFj/view?usp=drive_link" target="_blank">Zbalansowana nierówność Hardy'ego</a> - Antoni Szczukiewicz<br />
+        <i>analiza</i><br />
+        <br />
+        [119] <a href="" target="_blank">Operacja * i zbiory mikroskopijne</a> - Daria Perkowska<br />
         <i>analiza</i>
       </td>
     </tr>
