--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -75,6 +75,9 @@ td {
       <td>
         [25] <a href="https://drive.google.com/file/d/1Zue-qvnqXyHuMD7Vl_PCndqtQGhyiLFj/view?usp=drive_link" target="_blank">Zbalansowana nierówność Hardy'ego</a> - Antoni Szczukiewicz<br />
         <i>analiza</i><br />
+        <br />
+        [119] <a href="https://drive.google.com/file/d/1zN5_yYotDy9wdaEWVhwkgV1i-85gfy3O/view?usp=drive_link" target="_blank">Operacja * i zbiory mikroskopijne</a> - Daria Perkowska <br />
+        <i>teoria mnogości</i>
       </td>
     </tr>
     <tr>
