--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -179,7 +179,10 @@ td {
     <tr>
       <td>10:00-10:45</td>
       <td>
-        [25] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
+        [25] <a href="https://drive.google.com/file/d/1L5IO93IQiekpsezJSUFvvizSFkaT9KwK/view?usp=drive_link" target="_blank">Co mają ze sobą wspólnego kohomologie Galois, kohomologie Tate'a oraz liczby $p$-adyczne</a> - Bartłomiej Bychawski<br />
+        <i>algebra</i><br />
+        <br />
+        [119] <a href="https://drive.google.com/file/d/14EVKkAatEs468Z5D1QdtNTcKzQQqoi3R/view?usp=drive_link" target="_blank">Czy język jest jednoznaczny? O twierdzeniu Chomsky'ego-Schützenbergera</a> - Krzysztof Szymański <br/>
         <i>algebra, analiza, kombinatoryka i teoria grafów</i>
       </td>
     </tr>
