--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -28,7 +28,7 @@ a {
 
 
 W nawiasach kwadratowych podana jest sala, w jakiej wydarzenie odbędzie się.<br />
-Na obiady zapraszamy do restauracji <a href="https://www.facebook.com/Plastycznafood/?locale=pl_PL">Plastycznej</a>, która znajduje się w budynku Instytutu Informatyki (drzwi przy wejściu od strony Odry). Szatnia na odzież wierzchnią znajduje się w piątek w sali 105, a w sobotę i niedzielę - w sali 105.<br/>
+Na obiady zapraszamy do restauracji <a href="https://www.facebook.com/Plastycznafood/?locale=pl_PL">Plastycznej</a>, która znajduje się w budynku Instytutu Informatyki (drzwi przy wejściu od strony Odry). Szatnia na odzież wierzchnią znajduje się w sali 105.<br/>
 
 <style>
 td {
@@ -117,7 +117,8 @@ td {
     <tr>
       <td>12:15-14:00</td>
       <td>
-        Warsztaty
+        [25] Warsztaty: analiza harmoniczna - Mateusz Kwaśnicki <br />
+        [119 Warsztaty: teoria modeli i logika - Krzysztof Krupiński
       </td>
     </tr>
     <tr>
@@ -130,7 +131,10 @@ td {
     </tr>
     <tr>
       <td>15:00-16:00</td>
-      <td>Warsztaty</td>
+      <td>
+        [25] Warsztaty: analiza harmoniczna - Mateusz Kwaśnicki <br />
+        [119 Warsztaty: teoria modeli i logika - Krzysztof Krupiński
+      </td>
     </tr>
     <tr>
       <td>16:20-16:45</td>
@@ -158,7 +162,7 @@ td {
         [25] <a href="https://drive.google.com/file/d/1CVHxsmkfOH7QmYIlAbThKcI8TEtN5fDZ/view?usp=drive_link" target="_blank">Z wielką mocą wiąże się wielka odpowiedzialność</a> - Antoni Brożyna <br/>
         <i>teoria mnogości</i><br />
         <br />
-        [119] <a href="" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz<br />
+        [119] <a href="https://drive.google.com/file/d/1DgKtUvBH0AqIEHBNHKP23nE8Hv7HQRTa/view?usp=drive_link" target="_blank">Zastosowania wiązek wektorowych</a> - Bartosz Szachniewicz<br />
         <i>algebra, geometria, topologia</i>
       </td>
     </tr>
