--- a/src/templates/wss/programme.html
+++ b/src/templates/wss/programme.html
@@ -118,7 +118,7 @@ td {
       <td>12:15-14:00</td>
       <td>
         [25] Warsztaty: analiza harmoniczna - Mateusz Kwaśnicki <br />
-        [119 Warsztaty "Grupy i ciała minimalne": teoria modeli i logika - Krzysztof Krupiński
+        [119] Warsztaty "Grupy i ciała minimalne": teoria modeli i logika - Krzysztof Krupiński
       </td>
     </tr>
     <tr>
@@ -133,7 +133,7 @@ td {
       <td>15:00-16:00</td>
       <td>
         [25] Warsztaty: analiza harmoniczna - Mateusz Kwaśnicki <br />
-        [119 Warsztaty "Grupy i ciała minimalne": teoria modeli i logika - Krzysztof Krupiński
+        [119] Warsztaty "Grupy i ciała minimalne": teoria modeli i logika - Krzysztof Krupiński
       </td>
     </tr>
     <tr>
