--- a/src/templates/babysteps/base.html
+++ b/src/templates/babysteps/base.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 
-<html>
+<body>
 
   <table style="width:100%;">
     <tr>
@@ -42,4 +42,4 @@
     </tr>
     {% endfor %}
   </table>
-</html>
+</body>
