--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+    
+<input type="hidden">{{ last_update }}</input>
 
 {% block moreCSS %}
 <link rel="stylesheet" href="/stylesheets/news.css">
