--- a/src/templates/babysteps/base.html
+++ b/src/templates/babysteps/base.html
@@ -2,12 +2,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  
+  <meta charset="UTF-8"> 
+
   <style>
 
     .bitter-<uniquifier> {
       font-family: "Bitter", serif;
-      font-optical-sizing: auto;
       font-weight: <weight>;
       font-style: normal;
     }
