--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
     
-<input type="hidden">{{ last_update }}</input>
+<input type="hidden" id="last_update">{{ last_update }}</input>
 
 {% block moreCSS %}
 <link rel="stylesheet" href="/stylesheets/news.css">
