--- a/assets/stylesheets/basic-style.scss
+++ b/assets/stylesheets/basic-style.scss
@@ -1,5 +1,4 @@
-@use "sass:meta";
-@use 'colors_fonts';
+@import 'colors_fonts';
 
 html {
   margin: 0px;
@@ -10,7 +9,7 @@ html {
   font-family: Nunito;
 
 
-  background-color: colors_fonts.$subtitle;
+  background-color: $subtitle;
   //
   // background-image: linear-gradient(green, white);
   // background-size: 100% 50%;
@@ -22,14 +21,14 @@ body {
   margin: 0px;
   min-height: 100vh;
   
-  background-color: colors_fonts.$bg;
+  background-color: $bg;
 }
 
 h1 {
   font-size: 24px;
   font-weight: 800;
 
-  color: colors_fonts.$fg;
+  color: $fg;
   
   padding: 0px;
   margin: 0px;
@@ -37,7 +36,7 @@ h1 {
 }
 
 h2 {
-  color: colors_fonts.$subtitle;
+  color: $subtitle;
 
   font-size: 20px;
   margin: 0;
@@ -49,7 +48,7 @@ h3 {
   font-size: 16px;
   font-weight: 500;
 
-  color: colors_fonts.$subtitle;
+  color: $subtitle;
 
   padding: 0px;
   margin: 0px;
@@ -62,7 +61,7 @@ h4 {
   margin: 0;
   padding: 0;
 
-  color: colors_fonts.$blue;
+  color: $blue;
 
   font-size: 15px;
 }
@@ -70,7 +69,7 @@ h4 {
 a {
   text-decoration: none;
   font-weight: 800;
-  color: colors_fonts.$subtitle;
+  color: $subtitle;
 
   cursor: pointer;
 }
@@ -81,22 +80,22 @@ a {
 
   padding: 20px 40px;
 
-  background-color: colors_fonts.$subtitle;
-  color: colors_fonts.$bg;
+  background-color: $subtitle;
+  color: $bg;
 
   font-weight: 700;
   font-size: 20px;
 }
 
 .wss_button:hover {
-  background-color: colors_fonts.$blue;
-  color: colors_fonts.$fg;
+  background-color: $blue;
+  color: $fg;
 }
 
 
-@include meta.load-css('header_style');
-@include meta.load-css('button_menu');
-@include meta.load-css('footer_style');
+@import 'header_style';
+@import 'button_menu';
+@import 'footer_style';
 
 .main_container {
   width: 80%;
@@ -105,7 +104,7 @@ a {
   padding-bottom: 200px;
 
   font-size: 16px;
-  color: colors_fonts.$fg;
+  color: $fg;
 }
 
 .flexrow_100 {
