--- a/assets/stylesheets/button_menu.scss
+++ b/assets/stylesheets/button_menu.scss
@@ -1,9 +1,9 @@
-@use 'colors_fonts';
+@import 'colors_fonts';
 
 .button_menu {
   width: 90%;
 
-  background-color: colors_fonts.$button_background;
+  background-color: $button_background;
   padding-left: 10%;
 
   display: flex;
@@ -19,16 +19,16 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  background-color: colors_fonts.$button_background;
-  color: colors_fonts.$button_text;
+  background-color: $button_background;
+  color: $button_text;
   
   font-size: 16px;
   font-family: Nunito;
 }
 
 .button_menu button:hover {
-  background-color: colors_fonts.$button_hover_background;
-  color: colors_fonts.$button_text_hover;
+  background-color: $button_hover_background;
+  color: $button_text_hover;
   // font-weight: 700;
   cursor: pointer;
 }
