--- a/assets/stylesheets/footer_style.scss
+++ b/assets/stylesheets/footer_style.scss
@@ -1,4 +1,4 @@
-@use 'colors_fonts';
+@import 'colors_fonts';
 
 footer{
     width:100%;
@@ -8,7 +8,7 @@ footer{
     left: 0;
     bottom: 0; 
 
-    background-color: colors_fonts.$blue;
+    background-color: $blue;
 
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@ footer{
 }
 
 footer h3 {
-  color: colors_fonts.$fg;
+  color: $fg;
   font-weight: 800;
 
   margin: 0px;
@@ -58,7 +58,7 @@ footer h3 {
   padding-top: 5px;
   padding-bottom: 2px;
 
-  background-color: colors_fonts.$subtitle;
+  background-color: $subtitle;
   display: flex;
   flex-direction: row;
 
@@ -78,12 +78,12 @@ footer h3 {
 
 .www_auth a {
   font-size: 12px;
-  color: colors_fonts.$blue;
+  color: $blue;
   font-weight: 500;
 }
 
 .auth_name {
-  color: colors_fonts.$bg !important;
+  color: $bg !important;
   font-weight: 800;
 }
 
@@ -92,18 +92,18 @@ footer h3 {
   background: url("https://static.thenounproject.com/png/101791-200.png") no-repeat left;
   background-size: 20px;
 
-  background-color: colors_fonts.$bg;
+  background-color: $bg;
 
   width: 300px;
   height: 25px;
 
   border: none;
-  border: 1px solid colors_fonts.$subtitle;
+  border: 1px solid $subtitle;
 }
 
 .foot_contact {
   font-family: Nunito;
   font-size: 13px;
-  color: colors_fonts.$fg;
+  color: $fg;
 }
 
