--- a/assets/stylesheets/button_menu.css
+++ b/assets/stylesheets/button_menu.css
@@ -1,9 +1,9 @@
-@use 'colors_fonts';
+@import 'colors_fonts.css';
 
 .button_menu {
   width: 90%;
 
-  background-color: colors_fonts.$button_background;
+  background-color: var(--button_background);
   padding-left: 10%;
 
   display: flex;
@@ -19,16 +19,16 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  background-color: colors_fonts.$button_background;
-  color: colors_fonts.$button_text;
+  background-color: var(--button_background);
+  color: var(--button_text);
   
   font-size: 16px;
   font-family: Nunito;
 }
 
 .button_menu button:hover {
-  background-color: colors_fonts.$button_hover_background;
-  color: colors_fonts.$button_text_hover;
+  background-color: var(--button_hover_background);
+  color: var(--button_text_hover);
   // font-weight: 700;
   cursor: pointer;
 }
