--- a/assets/stylesheets/header_style.css
+++ b/assets/stylesheets/header_style.css
@@ -1,10 +1,10 @@
-@use 'colors_fonts';
+@import 'colors_fonts.css';
 
 .main_header {
   width: 100%;
   // height: 110px;
 
-  background-color: colors_fonts.$bg;
+  background-color: var(--bg);
 
   display: flex;
   flex-direction: column;
@@ -33,7 +33,7 @@
 .left_header img {
   padding-right: 20px;
   margin-right: 20px;
-  border-right: 1px solid colors_fonts.$blue;
+  border-right: 1px solid var(--blue);
 }
 
 .search_contact {
