--- a/assets/stylesheets/calendar.css
+++ b/assets/stylesheets/calendar.css
@@ -6,13 +6,11 @@
 }
 
 .conf_lst {
-  // width: calc(60%;
   min-width: 700px;
 }
 
 .side_bar {
-  min-widht: 401px;
-  // margin-left: 10%;
+  min-width: 401px;
   margin-left: auto;
   margin-right: auto;
 
@@ -30,7 +28,6 @@
     margin-left: 10%;
     min-width: 401px;
 
-    boder-left: 10px solid;
     padding-left: 5%;
 
     margin-top: 0px;
